syntax="proto3";

package records;

// 1.Service

service Recorder {
    rpc SendMessage(RecordRequest) returns (RecordResponse);
}

// 2. xxRequest

message RecordRequest{
    string user_name=1;
    uint32 user_age=2;
}

// 3.xxResponse
message RecordResponse{
    bool successful=1;
    string message=2;
}
